--- a/templates/form.html
+++ b/templates/form.html
@@ -12,7 +12,7 @@
 <form action="/response">
 <br>
 <p><b>How do you like to spend your free time?</b></p>
-	<input type="radio" id="Exploring new places" name="freetime_preference" value="Exploring new places">
+	<input type="radio" id="Exploring new places" name="freetime_preferences" value="Exploring new places">
   <label for="Exploring new places">Exploring new places</label><br>
 	<input type="radio" id="Relaxing in the sun" name="freetime_preferences" value="Relaxing in the sun">
   <label for="Relaxing in the sun">Relaxing in the sun</label><br>
@@ -54,14 +54,14 @@
   <label for="Jungles and swamps">Jungles and swamps</label><br>
   <input type="radio" id="Desert and flatland" name="ideal_habitat" value="Desert and flatland">
   <label for="Desert and flatland">Desert and flatland</label><br>
-  <input type="radio" id="Cities or neighborhoods" name="ideal_habitat" value="Cities or neighborhoods">
-  <label for="Cities or neighborhoods">Cities or neighborhoods</label><br>
+  <input type="radio" id="Cold and snowy" name="ideal_habitat" value="Cold and snowy">
+  <label for="Cold and snowy">Cold and snowy</label><br>
 
 <br>
 <p><b>How do you feel about teamwork?</b></p>
 
 
-  <input type="radio" id="I prefer to got solo" name="teamwork_thoughts" value="I prefer to got solo">
+  <input type="radio" id="I prefer to got solo" name="teamwork_thoughts" value="I prefer to go solo">
   <label for="I prefer to got solo">I prefer to got solo</label><br>
   <input type="radio" id="I love collaborating with others" name="teamwork_thoughts" value="I love collaborating with others">
   <label for="I love collaborating with others">I love collaborating with others</label><br>
