--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <title>Your Animal</title>
 </head>
 <body>
-
+<p>{{ animal }}</p>
+<img src = {{photo}} alt = "a picture of an animal">
 </body>
 </html>
