--- a/templates/page1.html
+++ b/templates/page1.html
@@ -5,7 +5,7 @@
 <title>Your Animal</title>
 </head>
 <body>
-<p>{{ animal }}</p>
+<p class="page1">{{ animal }}</p>
 <img src = {{photo}} alt = "a picture of an animal">
 </body>
 </html>
