--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,13 @@
+
+
 h1 {
 	text-align: center;
+	background: #59b3b3;
+	font-family: Copperplate, Papyrus, fantasy;
+	border-bottom-style: dashed;
+	border-left-style: solid;
+	border-right-style: solid;
+	border-color: #123bcc;
 }
 
 h2 {
@@ -7,5 +15,23 @@ h2 {
 }
 
 img {
-	width: 50%;
+	width: 40%;
+	border-style: ridge;
+	border-width: 8px;
 }
+
+body {
+	text-align: center;
+	background-color: #eba0d9;
+}
+
+.page1 {
+	text-align: center;
+	font-size: 50px;
+	font-family: "Brush Script MT", cursive;
+}
+
+.question {
+	font-family: Georgia, serifBrush Script MT", cursive;
+}
+	
